--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Verändere die URL um ein anderes Bild einzusetzen-->
 		<br/><br/>
 		Drücke '&lt;' und '&gt;' um die Schriftgröße zu verändern.
 		<br/><br/>
-		dann twittere einen Screenshot mit #dekretmix
+		dann poste einen Screenshot mit #dekretmix
 	</div>
 </body>
    <!--In der folgenden Funktion wird die Schriftgröße durch '<' und '>' veränderbar gemacht --> 
